# DARLA

./: .gitignore  CMakeLists.txt  README.md  causal_agentic_lvc_wargaming_darpa_hard_build_export.docx  eval_report.json  restart-dashboard.sh
docs/: darla-technical-review-for-chatgpt.md  darpa-accurate-causal-slice-review.md  phase-g-formal-export-contract.md  whitepaper-causal-agentic-runtime.html
docs/architecture/: CONTRIBUTING_UI.md  EVENT_MODEL.md  STATE_MODEL.md  STUDIO_ARCHITECTURE.md  UI_STANDARDS.md  WORKSPACE_GUIDE.md
frontend/: index.html  package-lock.json  package.json  server.mjs  vite.config.ts
frontend/scripts/: check-no-legacy-mocks.mjs
frontend/src/: App.old.tsx  App.replacement.tsx  App.tsx  CausalGraphPanel.tsx  CoaPanel.tsx  MapPanel.tsx  PlaybackBar.tsx  api.ts  index.css  main.tsx  playback.ts  styles.css  types.ts
frontend/src/causal/: accurateCausalGraph.ts
frontend/src/components/: AppShell.tsx  Badge.tsx  COACard.tsx  COAComparisonTable.tsx  COADetailsDrawer.tsx  COASummaryPanel.tsx  CausalGraphView.tsx  CausalNodeDetails.tsx  CausalPreviewCard.tsx  CompactCoaGateBoard.tsx  DataProvenancePanel.tsx  Drawer.tsx  DrilldownButton.tsx  EventMarker.tsx  EventsInboxTable.tsx  EvidenceChainPanel.tsx  InspectorPanel.tsx  InspectorRail.tsx  KeyEventsTimeline.tsx  MapEntityMarkerBadge.tsx  MapIcon.tsx  MapLayerControls.tsx  MetricRow.tsx  ModuleCanvas.tsx  ModuleInspector.tsx  ModuleLibrary.tsx  ModulePreviewCard.tsx  NavRail.tsx  OperationalMap.tsx  Replay3DPlaceholder.tsx  RunHistoryTable.tsx  ScenarioSidebar.tsx  ScenarioTree.tsx  SectionCard.tsx  SelectionBridgeHelpers.tsx  StatusBar.tsx  StudioFoundationStatus.tsx  SynchronizedInspector.tsx  TopNav.tsx  compactCoaGateBoard.css  (+2 more)
frontend/src/context/: SelectionContext.tsx  SimulationContext.tsx
frontend/src/data/: causalModel.ts  legacyCoSimDemoData.ts  legacyDemoScenario.ts  mockCoSim.ts  mockScenario.ts
frontend/src/evaluation/: evalUi.ts  types.ts
frontend/src/hooks/: useCausalDrilldown.tsx  useTimelineMoment.ts
frontend/src/lib/: elkLayout.ts  mapEntityMarkers.ts
frontend/src/pages/: COAsPage.tsx  CausalPage.tsx  CoSimStudioPage.tsx  EvaluationPage.tsx  MapPage.tsx  ModulesPage.tsx  OverviewPage.tsx  RealismPage.tsx  ReasonWorkspacePage.tsx  Replay3DPage.tsx  RunsPage.tsx
frontend/src/realism/: causalEvidence.ts  coaEvaluation.ts  deriveRealism.ts  types.ts
frontend/src/studio/: DarlaStudioApp.tsx  dataSelectors.ts  studio.css  useDashboardData.ts
frontend/src/studio-core/: CommandPaletteDialog.tsx  StudioCoreProvider.tsx  commandPaletteDialog.css  commandRegistry.ts  eventBus.ts  layoutStore.ts  selection.ts  workspaceRegistry.ts
frontend/src/timeline/: eventClassification.ts  timelineReducer.ts  timelineSelectors.ts  timelineTypes.ts
frontend/src/types/: cosimStudio.ts  moduleCanvas.ts  selection.ts
frontend/src/utils/: captureMoment.ts  causalSubgraph.ts  coSimFromDashboard.ts  coaHelpers.ts  dataProvenance.ts  effectiveCoaLog.ts  eventCategories.ts  keyEvents.ts  layoutStorage.ts  moduleGraphRealism.ts  runHistory.ts  scenarioProfile.ts  simModulesFromEntities.ts  simTime.ts  timelineGroupSelection.ts  timelineMarkers.ts  timelineMilestones.ts  timelineMoments.ts
models/: commander-policy-v0.yaml  comms-effects-v0.yaml  logistics-effects-v0.yaml  mission-effects-v0.yaml  sensor-confidence-v0.yaml
models/fmu/: README.md
scenarios/blind-holdout/: authority_denied_case.yaml  cyber_sensor_attack.yaml  false_logistics_correlation.yaml  manifest.json  no_causal_effect_decoy.yaml  relay_failure_masquerades_as_cyber.yaml  weather_confounded_detection.yaml
scenarios/taiwan-maritime-open-data/: data_provenance.yaml  scenario.yaml
scenarios/uas-maritime-cyber/: comms-only.yaml  fmu-stub.yaml  scenario.yaml
scripts/: apply-phase-g-formal.sh  apply-ui-accuracy.py  clean-studio-core-conflicts.sh  patch-phase-g-cmake.py
sim-adjudication/src/: EmergenceDetector.cpp  MicroWorldAdjudicator.cpp
sim-agent-demo/: main.cpp
sim-agents/include/sim-agents/: AgentFramework.h  (+3 more)
sim-agents/src/: AgentFramework.cpp  AgentRuntime.cpp  Agents.cpp  AuthorityGate.cpp  MaritimeAgentBindings.cpp
sim-calibrate/: main.cpp
sim-causal/src/: CalibrationHarness.cpp  CausalActionEstimator.cpp  CausalClaimBuilder.cpp  CausalEffectEstimator.cpp  CausalVariable.cpp  Identification.cpp  InterventionEngine.cpp  MinimumInterventionSearch.cpp  PlantedTruthScorer.cpp  RuntimeHypothesisGraph.cpp
sim-core/include/: ActionType.h  AgentAction.h  AgentBeliefState.h  Components.h  CourseOfAction.h  DecisionHorizon.h  Entity.h  EvidenceBundle.h  ExecutionBudget.h  FmuConfig.h  InterventionPreconditions.h  ModelValidity.h  RelationshipTypes.h  ScenarioLoader.h  ScriptComponent.h  ScriptRuntime.h  SimRealism.h  SimulationKernel.h  Snapshot.h  StructuralCausalModel.h  Types.h  Uncertainty.h  WorldState.h
sim-core/src/: AgentAction.cpp  CourseOfAction.cpp  DecisionHorizon.cpp  ExecutionBudget.cpp  InterventionPreconditions.cpp  RelationshipTypes.cpp  ScenarioLoader.cpp  ScriptComponent.cpp  SimRealism.cpp  SimulationKernel.cpp  StructuralCausalModel.cpp
sim-counterfactual/: main.cpp
sim-credibility/src/: AsyncValidationRuntime.cpp  CredibilityContractLoader.cpp  CredibilityEngine.cpp
sim-eval/: main.cpp
sim-events/src/: EventLedger.cpp
sim-export/: main.cpp
sim-fmi/src/: FmiMaster.cpp  FmuBinding.cpp  FmuComponent.cpp  FmuEventAdapter.cpp  FmuMasterClock.cpp  FmuRegistry.cpp
sim-graph/src/: GraphEntityResolver.cpp  RelationshipGraph.cpp  TemporalCausalGraph.cpp
sim-live/: main.cpp
sim-reasoning/src/: BeliefState.cpp  DecisionContext.cpp  EvidencePackage.cpp  MissionReasoner.cpp  SimulationBroker.cpp
sim-replay/: main.cpp
sim-runner/: main.cpp
sim-scripting/src/: PythonRuntime.cpp  PythonScriptComponent.cpp  ScriptContext.cpp
sim-search/: main.cpp
sim-serve/: main.cpp
sim-stream/: main.cpp
sim-tools/src/: EvidenceBundleWriter.cpp  ScenarioRunner.cpp  SimCommandProcessor.cpp  SimFrameExporter.cpp
sim-verify/: main.cpp
tests/unit/: main.cpp  phase_g_reasoning_smoke.cpp
(+133 files in other folders)
